--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "start": "node src/index.js",
+    "server": "nodemon src/index.js",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +20,12 @@
     "config": "^3.2.2",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
-    "mongoose": "^5.7.1",
-    "nodemon": "^1.19.2"
+    "jest": "^24.9.0",
+    "mongoose": "^5.7.1"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.1",
+    "nodemon": "^1.19.2",
+    "supertest": "^4.0.2"
   }
 }
