--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
+    "react-router-dom": "^5.1.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
