--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "react-router-dom": "^5.1.2",
+    "redis": "^2.8.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
